ClojureScript: add iterations, improve the code slightly

--- a/clojurescript/resources/public/index.html
+++ b/clojurescript/resources/public/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div>
-      <h1>Vanilla JavaScript</h1>
+      <h1>Vanilla ClojureScript</h1>
       <table id="game">
           <tbody>
           </tbody>
