Clojure Reagent: hardcode prod urls

--- a/clojurescript-reagent/public/prod.html
+++ b/clojurescript-reagent/public/prod.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="/css/site.css" rel="stylesheet" type="text/css">
+    <link href="https://htmlpreview.github.io/?https://github.com/andrusieczko/gameoflife/blob/master/clojurescript-reagent/public/css/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app">
       <h3>ClojureScript has not been compiled!</h3>
       <p>please run <b>npx shadow-cljs watch app</b> in order to start the compiler</p>
     </div>
-    <script src="/app-prod.js" type="text/javascript"></script>
+    <script src="https://htmlpreview.github.io/?https://github.com/andrusieczko/gameoflife/blob/master/clojurescript-reagent/public/app-prod.js" type="text/javascript"></script>
     <script type="text/javascript">clojurescript_reagent.core.init_BANG_();</script>
   </body>
 </html>
